@@ -55,7 +55,6 @@ namespace netlist{
     using Block::set_father;
     virtual SeqBlock* deep_copy() const;
     NETLIST_DB_DECL;
-    NETLIST_ELABORATE_DECL;
     NETLIST_GEN_SDFG;
     NETLIST_REPLACE_VARIABLE;
     
