@@ -1,3 +1,7 @@
+##### Thu 01/11/2012
+* Able to read in and report FSM for RS decoder.
+  Need to check the results reported.
+
 ##### Wed 31/10/2012
 * Clean up finished.
 
